<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ChatActivity">

    <TextView
        android:id="@+id/textViewCreateSubscribeChanel"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/create_subscribe"
        android:textColor="#1EFD05"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewChanelList"
        android:layout_width="66dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textColor="#1EFD05"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCreateSubscribeChanel" />

    <TextView
        android:id="@+id/textViewChat"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:textColor="#1EFD05"
        app:layout_constraintBottom_toTopOf="@+id/editTextMessage"
        app:layout_constraintEnd_toStartOf="@+id/textViewUserList"
        app:layout_constraintStart_toEndOf="@+id/textViewCreateSubscribeChanel"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleOfScreen" />

    <TextView
        android:id="@+id/textViewUserList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/user_list"
        android:textColor="#1EFD05"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTitleOfScreen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/write_your_name_s"
        android:textAlignment="center"
        android:textColor="#1EFD05"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textViewUserList"
        app:layout_constraintStart_toEndOf="@+id/textViewCreateSubscribeChanel"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSendMsg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/send_button"
        android:textAllCaps="false"
        android:textColor="#1EFD05"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewUserListView"
        app:layout_constraintStart_toEndOf="@+id/textViewChanelList" />

    <TextView
        android:id="@+id/textViewUserListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewChat"
        app:layout_constraintTop_toBottomOf="@+id/textViewUserList" />

    <EditText
        android:id="@+id/editTextMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/type_your_message"
        android:textColorHint="#108F0C"
        android:inputType="textPersonName"
        android:textColor="#1EFD05"
        app:layout_constraintBottom_toTopOf="@+id/buttonSendMsg"
        app:layout_constraintEnd_toStartOf="@+id/textViewUserListView"
        app:layout_constraintStart_toEndOf="@+id/textViewChanelList" />
</androidx.constraintlayout.widget.ConstraintLayout>